<resources>
    <string name="app_name">Application SQLite - ABDUR RAHMAN</string>
    <string name="nama_app">twoh.co</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AppInventory</string>
    <string name="login">AppInventory</string>
    <string name="barang_hint">Nama Barang</string>
    <string name="harga_hint">Harga Barang</string>
    <string name="merk_hint">Merk Barang</string>
    <string name="tombol_submit">Submit</string>
    <string name="tombol_tambah">Tambah Data</string>
    <string name="tombol_lihat">Lihat Data</string>
    <string name="tombol_edit">Edit</string>
    <string name="tombol_cancel">Cancel</string>
    <string name="tombol_dialog_edit">Edit</string>
    <string name="tombol_dialog_delete">Delete</string>
    <string name="title_view">Data Barang</string>
    <string name="title_edit">Edit Barang | ID : </string>
    <string name="button_simpan">Add Data</string>
    <string name="button_input">Get Strated</string>
    <string name="nama_barang">Input Data</string>
    <string name="merk">Merk</string>
    <string name="harga">Harga</string>

    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="quit">Keluar</string>
    <string name="memudahkan_aktivitas_inventori_anda">Memudahkan aktivitas inventori Anda</string>
    <string name="inveneer">INVENEER</string>
    <string name="desc">Hi I\'m UI Designer and Product Developer</string>
    <string name="main_menu">

ABDUR RAHMAN SUBKHI
</string>
    <string name="memudahkan_">

Memudahkan aktivitas inventori Anda
</string>
    <string name="create_an_a">

Create an Account
</string>
</resources>
