<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/google_pixe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/inveneer"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="30dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/inveneer"
        android:textAppearance="@style/inveneer2" />
    <TextView
        android:id="@+id/main_menu"
        android:layout_width="290dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="108dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/main_menu"
        android:textAppearance="@style/main_menu" />
    <EditText
        android:id="@+id/nama_barang"
        android:layout_width="296dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="163dp"
        android:layout_marginBottom="30dp"
        android:hint="Nama Barang"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/merk_barang"
        android:layout_width="296dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="251dp"
        android:hint="Merk Barang"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/harga_barang"
        android:layout_width="296dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="339dp"
        android:hint="Harga Barang"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttom_submit"
        android:layout_width="108dp"
        android:layout_height="69dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="427dp"
        android:background="@drawable/custombtn2"
        android:text="@string/button_simpan"
        android:textAppearance="@style/button_input" />



    <ImageView
        android:id="@+id/ilustration"
        android:layout_width="411dp"
        android:layout_height="288dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="484dp"

        android:background="@drawable/ilustration" />
</RelativeLayout>